# string_id

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  basic_database.hpp  biicode.conf  config.hpp.in  database.cpp  database.hpp  error.cpp  error.hpp  generator.cpp  generator.hpp  hash.hpp  string_id.cpp  string_id.hpp
detail/: database.cpp  database.hpp  hash.hpp
example/: main.cpp
